--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <script src="popup.js"></script>
+    <script src="getPagesSource.js"></script>
   </head>
   <body>
     Adfinder
