Things mostly work now, I think.
Too tired to think any more. Calling it.

--- a/panel/refreshForGoogleAd.html
+++ b/panel/refreshForGoogleAd.html
@@ -1,5 +1,12 @@
 <html>
 <body>
-<script src="refreshForGoogleAd.js"></script>
+  <script src="refreshForGoogleAd.js"></script>
+  <form id='simpleForm'>
+    String to search for in the response:<br>
+    <input type="text" name="searchString" value="ca-pub-"><br>
+    Number of tries(1-1000):<br>
+    <input type="number" name="NTries" value="3" min="1" max="1000"><br>
+  </form>
+  <button id='simpleButton'>Start</button>
 </body>
 </html>
