--- a/panel/refreshForStr.html
+++ b/panel/refreshForStr.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <script src="refreshForStr.js"></script>
-  <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads by keeping refreshing the active webpage. </h2>
+  <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads by keeping refreshing the active Chrome tab. </h2>
   <p> A typical use case is to find an ad from a syndicator partner who only owns a small share of the publisher's traffic. </p>
   <p> Usage: use 'ca-pub-XXX' as the search string, where ca-pub-XXX is the pub ID </p>
   <br>
