--- a/panel/refreshForStr.html
+++ b/panel/refreshForStr.html
@@ -1,15 +1,16 @@
 <html>
 <body>
   <script src="refreshForStr.js"></script>
-  <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads by keeping refreshing the active Chrome tab. </h2>
-  <p> A typical use case is to find an ad from a syndicator partner who only owns a small share of the publisher's traffic. </p>
+  <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads. </h2>
+  <p> A typical use case is to find an ad from a syndicator partner who only owns a small share of the publisher's traffic.
+     The extension will keep refreshing the webpage until it sees the desirable Google ad.</p>
   <p> Usage: use 'ca-pub-XXX' as the search string, where ca-pub-XXX is the pub ID </p>
   <br>
   <form id='searchStrForm'>
     <b>Partner property ID:</b><br>
-    <input type="text" name="searchString" value="ca-pub-"><br><br>
+    <input type="text" name="searchString" value="ca-pub"><br><br>
     <b>Max# of tries (1-1000):</b><br>
-    <input type="number" name="NTries" value="3" min="1" max="1000"><br><br>
+    <input type="number" name="NTries" value="1" min="1" max="1000"><br><br>
     <b>Currently trying: </b><div id='count'>0</div>
   </form>
   <button id='startButton'>Start</button>
