--- a/panel/refreshForStr.html
+++ b/panel/refreshForStr.html
@@ -4,7 +4,7 @@
   <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads. </h2>
   <p> A typical use case is to find an ad from a syndicator partner who only owns a small share of the publisher's traffic.
      The extension will keep refreshing the webpage until it sees the desirable Google ad.</p>
-  <p> Usage: use 'ca-pub-XXX' as the search string, where ca-pub-XXX is the pub ID </p>
+  <p> <b>Usage:</b> use 'ca-pub-XXX' as the search string, where ca-pub-XXX is the pub ID </p>
   <br>
   <form id='searchStrForm'>
     <b>Partner property ID:</b><br>
@@ -14,5 +14,6 @@
     <b>Currently trying: </b><div id='count'>0</div>
   </form>
   <button id='startButton'>Start</button>
+  <button id='stopButton'>Stop</button>
 </body>
 </html>
