--- a/panel/refreshForAd.html
+++ b/panel/refreshForAd.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <script src="refreshForStr.js"></script>
+  <script src="refreshForAd.js"></script>
   <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads. </h2>
   <p> A typical use case is to find an ad from a syndicator partner who only owns a small share of the publisher's traffic.
      The extension will keep refreshing the webpage until it sees the desirable Google ad.</p>
