--- a/panel/refreshForAd.html
+++ b/panel/refreshForAd.html
@@ -8,9 +8,9 @@
   <br>
   <form id='searchStrForm'>
     <b>Partner property ID:</b><br>
-    <input type="text" name="searchString" value="ca-pub"><br><br>
+    <input type="text" name="searchString" value="wind"><br><br>
     <b>Max# of tries (1-1000):</b><br>
-    <input type="number" name="NTries" value="1" min="1" max="1000"><br><br>
+    <input type="number" name="NTries" value="3" min="1" max="1000"><br><br>
     <b>Currently trying: </b><div id='count'>0</div>
   </form>
   <button id='startButton'>Start</button>
