--- a/panel/refreshForAd.html
+++ b/panel/refreshForAd.html
@@ -14,6 +14,6 @@
     <b>Currently trying: </b><div id='count'>0</div>
   </form>
   <button id='startButton'>Start</button>
-  <button id='stopButton'>Stop</button>
+  <button id='resetButton'>Reset</button>
 </body>
 </html>
