--- a/panel/refreshForAd.html
+++ b/panel/refreshForAd.html
@@ -2,8 +2,8 @@
 <body>
   <script src="refreshForAd.js"></script>
   <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads. </h2>
-  <p> A typical use case is to find an ad from a syndicator partner who only owns a small share of the publisher's traffic.
-     The extension will keep refreshing the webpage until it sees the desirable Google ad.</p>
+  <p> A typical use case is to find an ad from a syndicator partner (NPM) who only owns a small share of the publisher's traffic.
+     The extension will keep refreshing the webpage until it sees the specified search string in the responses, which means it has found a desirable Google ad.</p>
   <p> <b>Usage:</b> use 'ca-pub-XXX' as the search string, where ca-pub-XXX is the pub ID </p>
   <br>
   <form id='searchStrForm'>
