--- a/panel/refreshForAd.html
+++ b/panel/refreshForAd.html
@@ -1,14 +1,17 @@
 <html>
 <body>
   <script src="refreshForAd.js"></script>
-  <h2> This simple tool aims to help Sellside TAMs surface sporadic Google ads. </h2>
-  <p> A typical use case is to find an ad from a syndicator partner (NPM) who only owns a small share of the publisher's traffic.
-     The extension will keep refreshing the webpage until it sees the specified search string in the responses, which means it has found a desirable Google ad.</p>
-  <p> <b>Usage:</b> use 'ca-pub-XXX' as the search string, where ca-pub-XXX is the pub ID </p>
-  <br>
+  <h2> This simple tool aims to help surface surface sporadic Google Adx ads. </h2>
+  <p> A typical use case is to find an ad from a syndicator partner (NPM) who only owns a small share of the publisher's traffic. <br>
+     The extension will keep refreshing the webpage until it sees the specified search strings in the responses, which means it has found a desirable Google ad.</p>
+  <p> <b>Usage:</b> use 'ca-pub-XXX' as the search string, where ca-pub-XXX is the publisher ID. Ad tag ID and ad size (e.g., 300x250) can also be used.</p>
   <form id='searchStrForm'>
-    <b>Partner property ID:</b><br>
-    <input type="text" name="searchString" value="wind"><br><br>
+    <b>Partner property ID*:</b>
+    <input type="text" name="searchString" value="ca-pub-5155416681420300">
+    <b>Ad tag ID (optional):</b>
+    <input type="text" name="adTagID" value="8093393784">
+    <b>Ad size (optional):</b>
+    <input type="text" name="adSize" value=""><br><br>
     <b>Max# of tries (1-1000):</b><br>
     <input type="number" name="NTries" value="3" min="1" max="1000"><br><br>
     <b>Currently trying: </b><div id='count'>0</div>
